tests/fixtures/invalid/str_lt_float.py
# Cannot compare with < Str and Float
x: bool = "hello" < 1.0
